2023-03-08
    * Updated spawn-tracker.sh: added ability to detect messages about 'super' mobs.
    * Added utils/hsv-parameter-tester.py for subtle selection of color ranges 
      which help more precise detect colored messages by spawn-tracker.sh

2023-03-05
    * Added spawn-tracker-tester.sh to check if spawn-tester.sh can find any
      messages about mobs spawn in one or more screenshots.

2023-02-14
    * Added measuring resource consumption for OCR process across all scripts.
      CPU utilization will be measuring when logging level = DEBUG.

2023-02-12
    * Added ability to run few instances of scripts for different windows simultaneously.

2023-02-11
    * Added run-clicker.sh script to make running with bubbles (bubbling) easier.

2023-02-05
    * Rewrited mechanism of searching the trigger phrase by afk-check-clicker: 
      Checking TriggerPhrase in a screenshot in one call to tesseract-ocr now.

2023-02-03
    * Nesting userconfig files is available now. Values in nested userconfig files 
      have higher priority than its in a parent conf file. 