@@ -62,3 +62,8 @@ spt_UpperValHSV_Green="77,235,255"
 spt_BW_Treshold_Green=182
 
 spt_BW_Treshold_White=178
+
+
+##### Variables of discord-notificator ###########
+##
+dn_userprefix="Kjar"
