@@ -1,3 +1,6 @@
+2023-03-09
+    * Added notifications to discord server for spawn-tracker.sh messages.
+
 2023-03-08
     * Updated spawn-tracker.sh: added ability to detect messages about 'super' mobs.
     * Added utils/hsv-parameter-tester.py for subtle selection of color ranges 
